// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`theme token contracts > keeps every accent scheme complete in dark and light modes > dark-codex 1`] = `
{
  "--color-accent": "var(--blue-300)",
  "--color-accent-border": "var(--blue-a200)",
  "--color-accent-contrast": "#0d1524",
  "--color-accent-hover": "var(--blue-200)",
  "--color-accent-muted": "var(--blue-a50)",
  "--color-glow": "var(--blue-a75)",
}
`;

exports[`theme token contracts > keeps every accent scheme complete in dark and light modes > dark-rose 1`] = `
{
  "--color-accent": "var(--pink-300)",
  "--color-accent-border": "var(--pink-a200)",
  "--color-accent-contrast": "var(--pink-1000)",
  "--color-accent-hover": "var(--pink-200)",
  "--color-accent-muted": "var(--pink-a50)",
  "--color-glow": "var(--pink-a75)",
}
`;

exports[`theme token contracts > keeps every accent scheme complete in dark and light modes > dark-teal 1`] = `
{
  "--color-accent": "#4fbfad",
  "--color-accent-border": "rgb(79 191 173 / 38%)",
  "--color-accent-contrast": "#08201d",
  "--color-accent-hover": "#64d0bf",
  "--color-accent-muted": "rgb(79 191 173 / 16%)",
  "--color-glow": "rgb(79 191 173 / 26%)",
}
`;

exports[`theme token contracts > keeps every accent scheme complete in dark and light modes > dark-violet 1`] = `
{
  "--color-accent": "#a58bf0",
  "--color-accent-border": "rgb(165 139 240 / 38%)",
  "--color-accent-contrast": "#130f22",
  "--color-accent-hover": "#b7a1f5",
  "--color-accent-muted": "rgb(165 139 240 / 16%)",
  "--color-glow": "rgb(165 139 240 / 26%)",
}
`;

exports[`theme token contracts > keeps every accent scheme complete in dark and light modes > light-codex 1`] = `
{
  "--color-accent": "var(--blue-500)",
  "--color-accent-border": "var(--blue-a200)",
  "--color-accent-contrast": "#ffffff",
  "--color-accent-hover": "var(--blue-600)",
  "--color-accent-muted": "var(--blue-a50)",
  "--color-glow": "var(--blue-a75)",
}
`;

exports[`theme token contracts > keeps every accent scheme complete in dark and light modes > light-rose 1`] = `
{
  "--color-accent": "var(--pink-500)",
  "--color-accent-border": "var(--pink-a200)",
  "--color-accent-contrast": "#ffffff",
  "--color-accent-hover": "var(--pink-600)",
  "--color-accent-muted": "var(--pink-a50)",
  "--color-glow": "var(--pink-a75)",
}
`;

exports[`theme token contracts > keeps every accent scheme complete in dark and light modes > light-teal 1`] = `
{
  "--color-accent": "#1c7568",
  "--color-accent-border": "rgb(28 117 104 / 30%)",
  "--color-accent-contrast": "#ffffff",
  "--color-accent-hover": "#145b51",
  "--color-accent-muted": "rgb(28 117 104 / 12%)",
  "--color-glow": "rgb(28 117 104 / 16%)",
}
`;

exports[`theme token contracts > keeps every accent scheme complete in dark and light modes > light-violet 1`] = `
{
  "--color-accent": "#6244c4",
  "--color-accent-border": "rgb(98 68 196 / 30%)",
  "--color-accent-contrast": "#ffffff",
  "--color-accent-hover": "#5136a8",
  "--color-accent-muted": "rgb(98 68 196 / 12%)",
  "--color-glow": "rgb(98 68 196 / 16%)",
}
`;

exports[`theme token contracts > keeps neutral surfaces complete in both themes 1`] = `
{
  "--alpha-0": "color-mix(in oklab, var(--alpha-base) 0%, transparent)",
  "--alpha-01": "color-mix(in oklab, var(--alpha-base) 1%, transparent)",
  "--alpha-02": "color-mix(in oklab, var(--alpha-base) 2%, transparent)",
  "--alpha-04": "color-mix(in oklab, var(--alpha-base) 4%, transparent)",
  "--alpha-05": "color-mix(in oklab, var(--alpha-base) 5%, transparent)",
  "--alpha-06": "color-mix(in oklab, var(--alpha-base) 6%, transparent)",
  "--alpha-08": "color-mix(in oklab, var(--alpha-base) 8%, transparent)",
  "--alpha-10": "color-mix(in oklab, var(--alpha-base) 10%, transparent)",
  "--alpha-12": "color-mix(in oklab, var(--alpha-base) 12%, transparent)",
  "--alpha-15": "color-mix(in oklab, var(--alpha-base) 15%, transparent)",
  "--alpha-16": "color-mix(in oklab, var(--alpha-base) 16%, transparent)",
  "--alpha-20": "color-mix(in oklab, var(--alpha-base) 20%, transparent)",
  "--alpha-25": "color-mix(in oklab, var(--alpha-base) 25%, transparent)",
  "--alpha-30": "color-mix(in oklab, var(--alpha-base) 30%, transparent)",
  "--alpha-35": "color-mix(in oklab, var(--alpha-base) 35%, transparent)",
  "--alpha-40": "color-mix(in oklab, var(--alpha-base) 40%, transparent)",
  "--alpha-50": "color-mix(in oklab, var(--alpha-base) 50%, transparent)",
  "--alpha-60": "color-mix(in oklab, var(--alpha-base) 60%, transparent)",
  "--alpha-70": "color-mix(in oklab, var(--alpha-base) 70%, transparent)",
  "--alpha-base": "#fff",
  "--color-action-contrast": "var(--color-accent-contrast)",
  "--color-action-solid": "var(--color-accent)",
  "--color-action-solid-hover": "var(--color-accent-hover)",
  "--color-bg-base": "var(--color-surface-tertiary)",
  "--color-bg-element": "var(--color-surface-secondary)",
  "--color-bg-elevated": "var(--color-surface-elevated)",
  "--color-bg-input": "var(--color-surface-tertiary)",
  "--color-bg-overlay": "rgb(8 9 11 / 72%)",
  "--color-bg-surface": "var(--color-surface-base)",
  "--color-border-base": "var(--color-border-default)",
  "--color-border-control": "var(--alpha-40)",
  "--color-border-control-hover": "var(--alpha-50)",
  "--color-border-default": "var(--alpha-12)",
  "--color-border-emphasis": "var(--alpha-20)",
  "--color-border-focus": "var(--pink-300)",
  "--color-border-strong": "var(--color-border-emphasis)",
  "--color-border-subtle": "var(--alpha-06)",
  "--color-intent-caution-border": "var(--yellow-400)",
  "--color-intent-caution-solid": "var(--yellow-500)",
  "--color-intent-caution-surface": "var(--yellow-a50)",
  "--color-intent-caution-text": "var(--yellow-300)",
  "--color-intent-danger-border": "var(--red-300)",
  "--color-intent-danger-solid": "var(--red-400)",
  "--color-intent-danger-surface": "var(--red-a50)",
  "--color-intent-danger-text": "var(--red-200)",
  "--color-intent-discovery-border": "var(--pink-300)",
  "--color-intent-discovery-solid": "var(--pink-400)",
  "--color-intent-discovery-surface": "var(--pink-a50)",
  "--color-intent-discovery-text": "var(--pink-200)",
  "--color-intent-info-border": "var(--blue-400)",
  "--color-intent-info-solid": "var(--blue-400)",
  "--color-intent-info-surface": "var(--blue-a50)",
  "--color-intent-info-text": "var(--blue-200)",
  "--color-intent-success-border": "var(--green-400)",
  "--color-intent-success-solid": "var(--green-500)",
  "--color-intent-success-surface": "var(--green-a50)",
  "--color-intent-success-text": "var(--green-300)",
  "--color-intent-warning-border": "var(--orange-400)",
  "--color-intent-warning-solid": "var(--orange-500)",
  "--color-intent-warning-surface": "var(--orange-a50)",
  "--color-intent-warning-text": "var(--orange-200)",
  "--color-status-error": "var(--color-intent-danger-text)",
  "--color-status-info": "var(--color-intent-info-text)",
  "--color-status-neutral": "var(--gray-550)",
  "--color-status-success": "var(--color-intent-success-text)",
  "--color-status-warning": "var(--color-intent-warning-text)",
  "--color-surface-base": "var(--gray-200)",
  "--color-surface-elevated": "var(--gray-300)",
  "--color-surface-secondary": "var(--gray-100)",
  "--color-surface-tertiary": "var(--gray-50)",
  "--color-text-default": "var(--gray-700)",
  "--color-text-disabled": "var(--gray-500)",
  "--color-text-emphasis": "var(--gray-1000)",
  "--color-text-inverse": "var(--gray-0)",
  "--color-text-primary": "var(--color-text-emphasis)",
  "--color-text-secondary": "var(--color-text-default)",
  "--color-text-subtle": "var(--gray-650)",
  "--color-text-tertiary": "var(--color-text-subtle)",
  "--elevation-composer": "0 0 0 1px rgb(0 0 0 / 4%), 0 2px 8px 0 rgb(0 0 0 / 4%), 0 4px 80px 8px rgb(0 0 0 / 2.4%)",
  "--elevation-composer-dark": "inset 0 0 1px 0 rgb(255 255 255 / 20%)",
  "--elevation-inspector": "var(--elevation-stroke), 0 3px 7.5px rgb(0 0 0 / 4%), 0 0 20px rgb(0 0 0 / 5%)",
  "--elevation-panel": "var(--elevation-stroke), var(--elevation-300-geo) rgb(var(--shadow-color) / var(--shadow-alpha-300))",
  "--elevation-rail": "var(--elevation-stroke), 0 3px 7.5px rgb(0 0 0 / 3%), 0 0 16px rgb(0 0 0 / 2%)",
  "--elevation-stroke": "0 0 0 var(--border-width-hairline) var(--color-border-emphasis)",
  "--gray-0": "#0d0d0d",
  "--gray-100": "#181818",
  "--gray-1000": "#fff",
  "--gray-150": "#1c1c1c",
  "--gray-200": "#212121",
  "--gray-25": "#101010",
  "--gray-250": "#282828",
  "--gray-300": "#303030",
  "--gray-350": "#393939",
  "--gray-400": "#414141",
  "--gray-450": "#4f4f4f",
  "--gray-50": "#131313",
  "--gray-500": "#5d5d5d",
  "--gray-550": "#767676",
  "--gray-600": "#8f8f8f",
  "--gray-650": "#9f9f9f",
  "--gray-700": "#afafaf",
  "--gray-75": "#161616",
  "--gray-750": "#b9b9b9",
  "--gray-800": "#cdcdcd",
  "--gray-850": "#dcdcdc",
  "--gray-900": "#ededed",
  "--gray-925": "#f3f3f3",
  "--gray-950": "#f3f3f3",
  "--gray-975": "#f9f9f9",
  "--shadow-lg": "0 16px 44px rgb(0 0 0 / 46%)",
  "--shadow-md": "0 4px 14px rgb(0 0 0 / 38%)",
  "--shadow-sm": "0 1px 2px rgb(0 0 0 / 40%)",
}
`;

exports[`theme token contracts > keeps neutral surfaces complete in both themes 2`] = `
{
  "--alpha-0": "color-mix(in oklab, var(--alpha-base) 0%, transparent)",
  "--alpha-01": "color-mix(in oklab, var(--alpha-base) 1%, transparent)",
  "--alpha-02": "color-mix(in oklab, var(--alpha-base) 2%, transparent)",
  "--alpha-04": "color-mix(in oklab, var(--alpha-base) 4%, transparent)",
  "--alpha-05": "color-mix(in oklab, var(--alpha-base) 5%, transparent)",
  "--alpha-06": "color-mix(in oklab, var(--alpha-base) 6%, transparent)",
  "--alpha-08": "color-mix(in oklab, var(--alpha-base) 8%, transparent)",
  "--alpha-10": "color-mix(in oklab, var(--alpha-base) 10%, transparent)",
  "--alpha-12": "color-mix(in oklab, var(--alpha-base) 12%, transparent)",
  "--alpha-15": "color-mix(in oklab, var(--alpha-base) 15%, transparent)",
  "--alpha-16": "color-mix(in oklab, var(--alpha-base) 16%, transparent)",
  "--alpha-20": "color-mix(in oklab, var(--alpha-base) 20%, transparent)",
  "--alpha-25": "color-mix(in oklab, var(--alpha-base) 25%, transparent)",
  "--alpha-30": "color-mix(in oklab, var(--alpha-base) 30%, transparent)",
  "--alpha-35": "color-mix(in oklab, var(--alpha-base) 35%, transparent)",
  "--alpha-40": "color-mix(in oklab, var(--alpha-base) 40%, transparent)",
  "--alpha-50": "color-mix(in oklab, var(--alpha-base) 50%, transparent)",
  "--alpha-60": "color-mix(in oklab, var(--alpha-base) 60%, transparent)",
  "--alpha-70": "color-mix(in oklab, var(--alpha-base) 70%, transparent)",
  "--alpha-base": "#0d0d0d",
  "--color-bg-base": "var(--color-surface-tertiary)",
  "--color-bg-element": "var(--color-surface-secondary)",
  "--color-bg-elevated": "var(--color-surface-elevated)",
  "--color-bg-input": "var(--color-surface-tertiary)",
  "--color-bg-overlay": "rgb(35 32 29 / 34%)",
  "--color-bg-surface": "var(--color-surface-base)",
  "--color-border-base": "var(--color-border-default)",
  "--color-border-control": "var(--alpha-50)",
  "--color-border-control-hover": "var(--alpha-60)",
  "--color-border-default": "var(--alpha-10)",
  "--color-border-emphasis": "var(--alpha-15)",
  "--color-border-focus": "var(--pink-500)",
  "--color-border-strong": "var(--color-border-emphasis)",
  "--color-border-subtle": "var(--alpha-05)",
  "--color-intent-caution-border": "var(--yellow-800)",
  "--color-intent-caution-solid": "var(--yellow-700)",
  "--color-intent-caution-surface": "var(--yellow-a25)",
  "--color-intent-caution-text": "var(--yellow-800)",
  "--color-intent-danger-border": "var(--red-500)",
  "--color-intent-danger-solid": "var(--red-500)",
  "--color-intent-danger-surface": "var(--red-a25)",
  "--color-intent-danger-text": "var(--red-700)",
  "--color-intent-discovery-border": "var(--pink-500)",
  "--color-intent-discovery-solid": "var(--pink-500)",
  "--color-intent-discovery-surface": "var(--pink-a25)",
  "--color-intent-discovery-text": "var(--pink-600)",
  "--color-intent-info-border": "var(--blue-500)",
  "--color-intent-info-solid": "var(--blue-500)",
  "--color-intent-info-surface": "var(--blue-a25)",
  "--color-intent-info-text": "var(--blue-500)",
  "--color-intent-success-border": "var(--green-600)",
  "--color-intent-success-solid": "var(--green-500)",
  "--color-intent-success-surface": "var(--green-a25)",
  "--color-intent-success-text": "var(--green-700)",
  "--color-intent-warning-border": "var(--orange-500)",
  "--color-intent-warning-solid": "var(--orange-500)",
  "--color-intent-warning-surface": "var(--orange-a25)",
  "--color-intent-warning-text": "var(--orange-700)",
  "--color-status-error": "var(--color-intent-danger-text)",
  "--color-status-info": "var(--color-intent-info-text)",
  "--color-status-neutral": "var(--gray-550)",
  "--color-status-success": "var(--color-intent-success-text)",
  "--color-status-warning": "var(--color-intent-warning-text)",
  "--color-surface-base": "var(--gray-0)",
  "--color-surface-elevated": "var(--gray-0)",
  "--color-surface-secondary": "var(--gray-50)",
  "--color-surface-tertiary": "var(--gray-75)",
  "--color-text-default": "var(--gray-700)",
  "--color-text-disabled": "var(--gray-400)",
  "--color-text-emphasis": "var(--gray-1000)",
  "--color-text-inverse": "var(--gray-0)",
  "--color-text-primary": "var(--color-text-emphasis)",
  "--color-text-secondary": "var(--color-text-default)",
  "--color-text-subtle": "var(--gray-500)",
  "--color-text-tertiary": "var(--color-text-subtle)",
  "--elevation-composer": "0 0 0 1px rgb(0 0 0 / 4%), 0 2px 8px 0 rgb(0 0 0 / 4%), 0 4px 40px 8px rgb(0 0 0 / 2.4%)",
  "--elevation-composer-dark": "inset 0 0 1px 0 rgb(255 255 255 / 60%)",
  "--elevation-inspector": "var(--elevation-stroke), 0 3px 7.5px rgb(0 0 0 / 4%), 0 0 20px rgb(0 0 0 / 5%)",
  "--elevation-panel": "var(--elevation-stroke), var(--elevation-300-geo) rgb(var(--shadow-color) / var(--shadow-alpha-300))",
  "--elevation-rail": "var(--elevation-stroke), 0 3px 7.5px rgb(0 0 0 / 3%), 0 0 16px rgb(0 0 0 / 2%)",
  "--elevation-stroke": "0 0 0 var(--border-width-hairline) var(--color-border-emphasis)",
  "--gray-0": "#fff",
  "--gray-100": "#ededed",
  "--gray-1000": "#0d0d0d",
  "--gray-150": "#dfdfdf",
  "--gray-200": "#cdcdcd",
  "--gray-25": "#fcfcfc",
  "--gray-250": "#b9b9b9",
  "--gray-300": "#afafaf",
  "--gray-350": "#9f9f9f",
  "--gray-400": "#8f8f8f",
  "--gray-450": "#767676",
  "--gray-50": "#f9f9f9",
  "--gray-500": "#5d5d5d",
  "--gray-550": "#4f4f4f",
  "--gray-600": "#414141",
  "--gray-650": "#393939",
  "--gray-700": "#303030",
  "--gray-75": "#f3f3f3",
  "--gray-750": "#282828",
  "--gray-800": "#212121",
  "--gray-850": "#1c1c1c",
  "--gray-900": "#181818",
  "--gray-925": "#161616",
  "--gray-950": "#131313",
  "--gray-975": "#101010",
  "--shadow-lg": "0 16px 44px rgb(35 32 29 / 12%)",
  "--shadow-md": "0 4px 16px rgb(35 32 29 / 8%)",
  "--shadow-sm": "0 1px 2px rgb(35 32 29 / 6%)",
}
`;
